--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,1 +1,16 @@
+name: Liner
 
+on:
+  pull_request:
+    branches: [develop]
+    
+jobs:
+  build:
+      runs-on: ubuntu-latest
+      
+      steps:
+       - uses: actions/checkout@v3
+       - name: Super-Linter
+         uses: github/super-linter@v4.9.2
+         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
