--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -3,11 +3,13 @@
         "browser": true,
         "es2021": true
     },
+
     "extends": [
         "plugin:react/recommended",
         "airbnb",
         "plugin:@typescript-eslint/recommended"
     ],
+
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaFeatures": {
@@ -16,10 +18,13 @@
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
+
     "plugins": [
         "react",
-        "@typescript-eslint"
+        "@typescript-eslint",
+        "react-hooks"
     ],
+
     "rules": {
         "no-use-before-define": "off",
         "@typescript-eslint/no-use-before-define": ["error"],
@@ -31,8 +36,15 @@
             "ts": "never",
             "tsx": "never"
             }
-        ]
+        ],
+        "no-shadow": "off",
+        "@typescript-eslint/no-shadow": ["error"],
+        "import/prefer-default-export": "off",
+        "react/prop-types": "off",
+        "react-hooks/rules-of-hooks": "error",
+        "react-hooks/exhaustive-deps": "warn"
     },
+
     "settings": {
         "import/resolver": {
             "typescript": {}
