--- a/client/package.json
+++ b/client/package.json
@@ -52,6 +52,7 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
     "postcss": "^8.4.13",
+    "prettier": "2.6.2",
     "tailwindcss": "^3.0.24"
   }
 }
