♻️ ✨ (Prettier): Formatted all files with prettier

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -19,22 +19,18 @@
         "sourceType": "module"
     },
 
-    "plugins": [
-        "react",
-        "@typescript-eslint",
-        "react-hooks"
-    ],
+    "plugins": ["react", "@typescript-eslint", "react-hooks"],
 
     "rules": {
         "no-use-before-define": "off",
         "@typescript-eslint/no-use-before-define": ["error"],
-        "react/jsx-filename-extension": [ "warn", {"extensions": [".tsx"]} ],
+        "react/jsx-filename-extension": ["warn", { "extensions": [".tsx"] }],
         "import/extensions": [
             "error",
             "ignorePackages",
             {
-            "ts": "never",
-            "tsx": "never"
+                "ts": "never",
+                "tsx": "never"
             }
         ],
         "no-shadow": "off",
