--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -18,7 +18,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: 16.x
 
     steps:
       - name: Checkout to develop branch
@@ -32,8 +32,13 @@ jobs:
       - name: Install all package dependencies
         run: npm install
 
-      # - name: Lint the code
-      #   run:  npx eslint src/* --fix
+      - name: Run Coverage Tests
+        run:  npm test -- --coverage
+
+      - name: Coveralls
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build the project
         run: npm run build
