--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
+        "test-coverage": "jest -- --coverage",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
@@ -44,6 +45,7 @@
         "@typescript-eslint/eslint-plugin": "^5.23.0",
         "@typescript-eslint/parser": "^5.23.0",
         "autoprefixer": "^10.4.7",
+        "coveralls": "^3.1.1",
         "eslint": "^8.15.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-import-resolver-typescript": "^2.7.1",
