--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -32,13 +32,16 @@ jobs:
       - name: Install all package dependencies
         run: npm install
 
-      - name: Run Coverage Tests
-        run:  npm test -- --coverage
+      - name: Lint the code
+        run: npx eslint "src/**" --fix
 
-      - name: Coveralls
-        uses: coverallsapp/github-action@master
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Run Coverage Tests
+      #   run:  npm test -- --coverage
+
+      # - name: Coveralls
+      #   uses: coverallsapp/github-action@master
+      #   with:
+      #     github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build the project
         run: npm run build
