--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,7 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "test-coverage": "jest -- --coverage",
+        "coverage": "jest --collect-coverage",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
@@ -56,5 +56,11 @@
         "postcss": "^8.4.13",
         "prettier": "2.6.2",
         "tailwindcss": "^3.0.24"
+    },
+    "jest": {
+        "colectCoverageFrom": [
+        "src/**/*.{ts,tsx,js,jsx}",
+        "!src/**/*.d.ts"
+    ]
     }
 }
