--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -13,12 +13,8 @@ defaults:
     working-directory: client
 
 jobs:
-  Build-and-Deploy:
+  Build-and-Deploy Reactg App:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [16.x]
 
     steps:
       - name: Checkout to develop branch
@@ -27,21 +23,13 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: '16.x'
 
       - name: Install all package dependencies
         run: npm install
 
-      - name: Lint the code
-        run: npx eslint "src/**" --fix
-
-      # - name: Run Coverage Tests
-      #   run:  npm test -- --coverage
-
-      # - name: Coveralls
-      #   uses: coverallsapp/github-action@master
-      #   with:
-      #     github-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Lint the code and format the files
+        run: npm run test-eslint
 
       - name: Build the project
         run: npm run build
