✨ 🔥 (CICD): Made changes to eslint

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -23,6 +23,9 @@
 
     "rules": {
         "no-use-before-define": "off",
+        "react/react-in-jsx-scope": "off",
+        "no-unused-expressions": "off",
+        "max-len": ["warn", { "code": 250 }],
         "@typescript-eslint/no-use-before-define": ["error"],
         "react/jsx-filename-extension": ["warn", { "extensions": [".tsx"] }],
         "import/extensions": [
