🐛 (CICD): Minor changes

--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -69,13 +69,13 @@ jobs:
   Build-and-Deploy-Frontend:
     runs-on: ubuntu-latest
     needs: label-check
+    defaults:
+      run:
+        working-directory: client
 
     steps:
       - name: Checkout to develop branch
         uses: actions/checkout@v2
-
-      - name: Change to client directory
-        run: cd client
 
       - name: Setup Node.js
         uses: actions/setup-node@v2
