--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
         "@types/react-dom": "^18.0.3",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
+        "react-icons": "^4.3.1",
         "react-scripts": "^5.0.1",
         "typescript": "^4.6.4",
         "web-vitals": "^2.1.4"
@@ -57,11 +58,5 @@
         "postcss": "^8.4.13",
         "prettier": "2.6.2",
         "tailwindcss": "^3.0.24"
-    },
-    "jest": {
-        "colectCoverageFrom": [
-        "src/**/*.{ts,tsx,js,jsx}",
-        "!src/**/*.d.ts"
-    ]
     }
 }
