🐛 ✨ (CICD): Minor change

--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -1,7 +1,14 @@
 ---
 name: 'React CICD'
 
-on: [push, pull_request]
+on: 
+  push:
+    branches: 
+      - develop
+
+  pull_request:
+    branches:
+      - develop
 
 jobs:
   milestone-check:
