--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -112,3 +112,8 @@ jobs:
       steps:
       - name: Checkout to develop branch
         uses: actions/checkout@v2
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16.x'
