--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -113,7 +113,26 @@ jobs:
       - name: Checkout to develop branch
         uses: actions/checkout@v2
 
+      - name: Configure AWS tokens
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
           node-version: '16.x'
+
+      - name: Install all package dependencies
+        run: npm install
+
+      - name: Build the CDK
+        run: npm run build
+
+      - name: Synthesize the CDK
+        run: cdk synth
+
+      - name: Deploy the CDK
+        run: cdk deploy --require-approval never
