--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -128,6 +128,9 @@ jobs:
       - name: Install all package dependencies
         run: npm install
 
+      - name: Install CDK
+        run: npm install -g aws-cdk npx
+
       - name: Build the CDK
         run: npm run build
 
