--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -113,6 +113,14 @@ jobs:
       - name: Checkout to develop branch
         uses: actions/checkout@v2
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16.x'
+
+      - name: Install all package dependencies
+        run: npm install
+
       - name: Configure AWS tokens
         run: ls
       #   uses: aws-actions/configure-aws-credentials@v1
@@ -121,13 +129,9 @@ jobs:
       #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       #     aws-region: us-east-1
 
-      # - name: Setup Node.js
-      #   uses: actions/setup-node@v2
-      #   with:
-      #     node-version: '16.x'
+     
 
-      # - name: Install all package dependencies
-      #   run: npm install
+     
 
       # - name: Install CDK
       #   run: npm install -g aws-cdk npx
