--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -128,12 +128,8 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-     
-
-     
-
-      # - name: Install CDK
-      #   run: npm install -g aws-cdk npx
+      - name: Install CDK
+        run: npm install aws-cdk
 
       - name: Build the CDK
         run: npm run build
