--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -84,7 +84,7 @@ jobs:
         run: npm run test-eslint
 
       - name: Build the project
-        run: CI="" npm run build
+        run: CI=false npm run build
 
       - name: Configure AWS tokens
         uses: aws-actions/configure-aws-credentials@v1
