--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -23,6 +23,7 @@
 
     "rules": {
         "no-use-before-define": "off",
+        "no-explicit-any": 0,
         "no-unused-vars": 0,
         "react/react-in-jsx-scope": "off",
         "no-unused-expressions": "off",
