--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -24,6 +24,7 @@
     "rules": {
         "no-use-before-define": "off",
         "no-explicit-any": 0,
+        "react/destructuring-assignment": 0,
         "no-unused-vars": 0,
         "react/react-in-jsx-scope": "off",
         "no-unused-expressions": "off",
