--- a/client/.prettierrc.json
+++ b/client/.prettierrc.json
@@ -1,5 +1,7 @@
 {
-    "trailingComma": "es5",
+    "trailingComma": "all",
+    "useTabs": false,
+    "tabWidth": 4,
     "semi": true,
     "singleQuote": true,
     "doubleQuote": true
