--- a/client/package.json
+++ b/client/package.json
@@ -50,13 +50,16 @@
     "coveralls": "^3.1.1",
     "eslint": "^8.15.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
     "postcss": "^8.4.13",
-    "prettier": "2.6.2",
+    "prettier": "^2.6.2",
     "tailwindcss": "^3.0.24"
   },
   "jest": {
