--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -85,10 +85,9 @@ jobs:
 
       - name: Generate coverage report
         run:  npm test -- --coverage --watchAll=false
-        run: |
-              cd client
 
       - name: Coveralls
+        working-directory: ./client/coverage
         uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
