--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -87,10 +87,10 @@ jobs:
         run:  npm test -- --coverage --watchAll=false
 
       - name: Coveralls
-        working-directory: ./client/coverage
         uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          path-to-lcov: $GITHUB_WORKSPACE/client/coverage/lcov.info
 
       - name: Build the project
         run: CI=false npm run build
