--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -90,7 +90,7 @@ jobs:
         uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          path-to-lcov: $GITHUB_WORKSPACE/client/coverage/lcov.info
+          path-to-lcov: ./client/coverage/lcov.info
 
       - name: Build the project
         run: CI=false npm run build
