--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -26,6 +26,7 @@
     "plugins": ["react", "@typescript-eslint", "react-hooks", "prettier"],
 
     "rules": {
+        "jest/expect-expect": "off",
         "no-use-before-define": "off",
         "no-explicit-any": 0,
         "react/destructuring-assignment": 0,
