--- a/services/package.json
+++ b/services/package.json
@@ -10,10 +10,12 @@
     "nodejs": "^0.0.0",
     "serverless": "^3.17.0",
     "serverless-dynamodb-client": "^0.0.2",
-    "typescript": "^4.6.4"
+    "twitter-v2": "^1.1.0"
   },
   "devDependencies": {
     "serverless-dynamodb-local": "^0.2.40",
-    "serverless-offline": "^8.8.0"
+    "serverless-offline": "^8.8.0",
+    "serverless-plugin-typescript": "^2.1.2",
+    "typescript": "^4.6.4"
   }
 }
