--- a/services/package.json
+++ b/services/package.json
@@ -7,6 +7,7 @@
   "scripts": {},
   "dependencies": {
     "aws-sdk": "^2.1138.0",
+    "dotenv": "^16.0.1",
     "nodejs": "^0.0.0",
     "serverless": "^3.17.0",
     "serverless-dynamodb-client": "^0.0.2",
