:wrench: fixes to database table

--- a/services/serverless.yml
+++ b/services/serverless.yml
@@ -77,19 +77,6 @@ provider:
 #        path: /todos
 #       method: post
 
-custom:
-  dynamodb:
-    stages:
-      - dev
-    start: 
-      docker: true
-      port: 8000
-      inMemory: true
-      migrate: true
-      seed: true
-      convertEmptyValues: true
-      # noStart: true
-
 # functions:
 #   hello:
   #  handler: src/handler.hello
@@ -163,6 +150,16 @@ custom:
   serverlessPluginTypescript:
     tsConfigFileLocation: './tsconfig.build.json'
   secrets: ${file(./.secrets.yml):Twitter_Credentials}
+  dynamodb:
+    stages:
+      - dev
+    start: 
+      docker: true
+      port: 8000
+      inMemory: true
+      migrate: true
+      seed: true
+      convertEmptyValues: true
 
 resources:
   Resources:
@@ -184,41 +181,7 @@ resources:
         ProvisionedThroughput:
           ReadCapacityUnits: 1
           WriteCapacityUnits: 1
-
-    LambdaRole: 
-      Type: AWS::IAM::Role
-      Properties:
-        AssumeRolePolicyDocument:
-          Statement:
-            - Effect: Allow
-              Principal:
-                Service: lambda.amazonaws.com
-              Action: sts:AssumeRole
-          ManagedPolicyArns:
-            - arn:aws:iam::aws:policy/AWSXrayWriteOnlyAccess
-            - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
-          Policies:
-            - PolicyName: dynamodb
-              PolicyDocument:
-                Statement:
-                  - Effect: Allow
-                    Action:
-                      - 'dynamodb:BatchGetItem'
-                      - 'dynamodb:BatchWriteItem'
-                      - 'dynamodb:PutItem'
-                      - 'dynamodb:DeleteItem'
-                      - 'dynamodb:GetItem'
-                      - 'dynamodb:Scan'
-                      - 'dynamodb:Query'
-                      - 'dynamodb:UpdateItem'
-                      - 'dynamodb:PartiQL*'
-                    Resource:
-                      - !GetAtt usersTable.Arn
-                      - !Sub
-                        - ${Table}/*
-                        - Table: !GetAtt usersTable.Arn
-
-
+        TableName: ${self:service}-usersTable-${sls:stage}
 
 plugins:
   - serverless-dynamodb-local
