--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "serverless-dynamodb-local": "^0.2.40",
     "serverless-esbuild": "^1.29.0",
     "serverless-offline": "^8.8.0",
+    "serverless-s3-sync": "^3.0.0",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3",
