--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Serverless aws-nodejs-typescript template",
   "main": "serverless.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --config jest.uniy.config.js",
+    "test:int": "LOCAL=true jest --config jest.int.config.js",
+    "pretest:int": "serverless dynamodb start"
   },
   "engines": {
     "node": ">=14.15.0"
@@ -20,6 +22,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/node": "^14.14.25",
     "esbuild": "^0.14.11",
+    "jest": "^28.1.0",
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^3.0.0",
     "serverless-dynamodb-local": "^0.2.40",
