--- a/.github/workflows/serverless-deploy.yml
+++ b/.github/workflows/serverless-deploy.yml
@@ -8,6 +8,29 @@ on:
       - closed
 
 jobs:
+  Build Front-End:
+    if: ${{ github.event.pull_request.merged }}
+    runs-on: ubuntu-latest
+    needs: label-check
+    defaults:
+      run:
+        working-directory: client
+
+    steps:
+      - name: Checkout to develop branch
+        uses: actions/checkout@v2
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: "14.x"
+
+      - name: Install all package dependencies
+        run: yarn
+
+      - name: Build the client
+        run: CI=false yarn run build
+
   deploy:
     if: ${{ github.event.pull_request.merged }}
     runs-on: ubuntu-latest
