--- a/.github/workflows/serverless-deploy.yml
+++ b/.github/workflows/serverless-deploy.yml
@@ -8,7 +8,7 @@ on:
       - closed
 
 jobs:
-  Build Front-End:
+  Build-Front-End:
     if: ${{ github.event.pull_request.merged }}
     runs-on: ubuntu-latest
     needs: label-check
