--- a/.github/workflows/serverless-deploy.yml
+++ b/.github/workflows/serverless-deploy.yml
@@ -31,7 +31,7 @@ jobs:
         run: CI=false yarn run build
 
   deploy:
-    if: ${{ github.event.pull_request.merged }}
+    needs: Build-Front-End
     runs-on: ubuntu-latest
     strategy:
       matrix:
