--- a/.github/workflows/serverless-deploy.yml
+++ b/.github/workflows/serverless-deploy.yml
@@ -8,30 +8,7 @@ on:
       - closed
 
 jobs:
-  Build-Front-End:
-    if: ${{ github.event.pull_request.merged }}
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: client
-
-    steps:
-      - name: Checkout to develop branch
-        uses: actions/checkout@v2
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: "14.x"
-
-      - name: Install all package dependencies
-        run: yarn
-
-      - name: Build the client
-        run: CI=false yarn run build
-
   deploy:
-    needs: Build-Front-End
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -48,6 +25,16 @@ jobs:
 
       - name: Install package dependencies
         run: yarn
+
+      - name: Build the client
+        run:  |
+          cd client
+          yarn
+          yarn run build
+
+      - name: Change to root directory
+        run:  |
+        cd /
 
       - name: Serverless deploy
         uses: serverless/github-action@v3
