--- a/.github/workflows/serverless-deploy.yml
+++ b/.github/workflows/serverless-deploy.yml
@@ -8,7 +8,7 @@ on:
       - closed
 
 jobs:
-  deploy:
+  Serverless-Deploy:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -26,11 +26,11 @@ jobs:
       - name: Install package dependencies
         run: yarn
 
-      - name: Build the client
-        run: |
-          cd client
-          yarn
-          yarn run build
+      # - name: Build the client
+      #   run: |
+      #     cd client
+      #     yarn
+      #     yarn run build
 
       - name: Serverless deploy
         uses: serverless/github-action@v3
