🔥 🐛 (CICD): Major fix of Serverless Wrokflow

--- a/.github/workflows/serverless-deploy.yml
+++ b/.github/workflows/serverless-deploy.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   Serverless-Deploy:
+    if: ${{ github.event.pull_request.merged }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
