--- a/client/package.json
+++ b/client/package.json
@@ -60,6 +60,7 @@
     "eslint-plugin-react-hooks": "^4.5.0",
     "postcss": "^8.4.13",
     "prettier": "^2.6.2",
+    "react-router-dom": "6",
     "tailwindcss": "^3.0.24"
   }
 }
