✨ (CICD): Code to not treat warnings as errors

--- a/.github/workflows/serverless-deploy.yml
+++ b/.github/workflows/serverless-deploy.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           cd client
           yarn
-          yarn run build
+          CI=false yarn run build
 
       - name: Serverless deploy
         uses: serverless/github-action@v3
