--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest --config jest.uniy.config.js",
     "test:int": "LOCAL=true jest --config jest.int.config.js",
-    "pretest:int": "serverless dynamodb start"
+    "pretest:int": "docker-compose up -d dynamodb"
   },
   "engines": {
     "node": ">=14.15.0"
@@ -22,6 +22,7 @@
     "@serverless/typescript": "^3.0.0",
     "@types/aws-lambda": "^8.10.71",
     "@types/bcryptjs": "^2.4.2",
+    "@types/jest": "^27.5.1",
     "@types/node": "^14.14.25",
     "esbuild": "^0.14.11",
     "jest": "^28.1.0",
