--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "serverless-esbuild": "^1.29.0",
     "serverless-offline": "^8.8.0",
     "serverless-s3-sync": "^3.0.0",
+    "serverless-webpack": "^5.7.1",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3",
