--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Serverless aws-nodejs-typescript template",
   "main": "serverless.ts",
   "scripts": {
-    "test": "jest --config jest.uniy.config.js",
-    "test:int": "LOCAL=true jest --config jest.int.config.js",
+    "test": "jest --config jest.unit.config.js",
+    "test:int": "jest --config jest.int.config.js",
     "pretest:int": "docker-compose up -d dynamodb"
   },
   "engines": {
@@ -19,6 +19,7 @@
     "twitter-v2": "^1.1.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.17.12",
     "@serverless/typescript": "^3.0.0",
     "@types/aws-lambda": "^8.10.71",
     "@types/bcryptjs": "^2.4.2",
@@ -32,6 +33,7 @@
     "serverless-esbuild": "^1.29.0",
     "serverless-offline": "^8.8.0",
     "serverless-s3-sync": "^3.0.0",
+    "ts-jest": "^28.0.3",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3",
