--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "autoprefixer": "^10.4.7",
+    "axios": "^0.27.2",
     "coveralls": "^3.1.1",
     "eslint": "^8.15.0",
     "eslint-config-airbnb": "^19.0.4",
