--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,9 @@ on:
       - develop
     types: [opened, reopened, labeled]
 
+  push:
+    branches: [main, develop]
+
 jobs:
   milestone-check:
     name: Checks if milestone is used
