🎨 🔥 (CICD): Made changes to workflow and README

--- a/.github/workflows/serverless-deploy.yml
+++ b/.github/workflows/serverless-deploy.yml
@@ -36,8 +36,7 @@ jobs:
       - name: Make the test coverage
         run: |
           cd client
-          yarn test -- --coverage --watchAll
-          q
+          CI=true yarn test -- --coverage --watchAll
 
       - name: Coveralls
         uses: coverallsapp/github-action@master
