--- a/.github/workflows/serverless-deploy.yml
+++ b/.github/workflows/serverless-deploy.yml
@@ -37,6 +37,7 @@ jobs:
         run: |
           cd client
           CI=true yarn test -- --coverage --watchAll
+          echo q
 
       - name: Coveralls
         uses: coverallsapp/github-action@master
