✨ (CICD): Coverage report for backend

--- a/.github/workflows/serverless-deploy.yml
+++ b/.github/workflows/serverless-deploy.yml
@@ -34,16 +34,12 @@ jobs:
           CI=false yarn run build
 
       - name: Make the test coverage
-        run: |
-          cd client
-          CI=true yarn test -- --coverage --watchAll=false
+        run: yarn test -- --coverage
 
       - name: Coveralls
         uses: coverallsapp/github-action@master
         with:
-          working-directory: client
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          path-to-lcov: ./client/coverage/lcov.info
 
       - name: Serverless deploy
         uses: serverless/github-action@v3
