--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -25,6 +25,7 @@ jobs:
       - name: Changed to client directory and generate coverage for frontend
         run: |
           cd client
+          yarn
           yarn test -- --coverage --watchAll=false
 
       - name: Merge the coverage reports
