🐛 (CICD): Major fix

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -29,9 +29,7 @@ jobs:
           yarn test -- --coverage --watchAll=false
 
       - name: Merge the coverage reports
-        run: |
-          cd ~
-          node .tools/scripts/merge-reports.js
+        run: node tools/scripts/merge-reports.js
 
       - name: Upload report to Coveralls
         uses: coverallsapp/github-action@master
