--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -28,8 +28,8 @@ jobs:
           yarn
           yarn test -- --coverage --watchAll=false
 
-      - name: Merge the coverage reports
-        run: node tools/scripts/merge-reports.js
+      # - name: Merge the coverage reports
+      #   run: node tools/scripts/merge-reports.js
 
       - name: Upload report to Coveralls
         uses: coverallsapp/github-action@master
