--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@types/jest": "^27.5.1",
     "@types/node": "^14.14.25",
     "esbuild": "^0.14.11",
+    "glob": "^8.0.3",
     "jest": "^28.1.0",
     "json-schema-to-ts": "^1.5.0",
+    "path": "^0.12.7",
     "serverless": "^3.0.0",
     "serverless-dynamodb-local": "^0.2.40",
     "serverless-esbuild": "^1.29.0",
@@ -38,6 +40,7 @@
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.5.3",
     "workbox-broadcast-update": "^6.5.3",
@@ -50,8 +53,7 @@
     "workbox-range-requests": "^6.5.3",
     "workbox-routing": "^6.5.3",
     "workbox-strategies": "^6.5.3",
-    "workbox-streams": "^6.5.3",
-    "uuid": "^8.3.2"
+    "workbox-streams": "^6.5.3"
   },
   "author": "The serverless webpack authors (https://github.com/elastic-coders/serverless-webpack)",
   "license": "MIT"
