--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -3,39 +3,44 @@
     "name": "Twitter-Summariser",
     "icons": [
         {
-            "src": "TS_Logo.ico",
-            "sizes": "64x64 32x32 24x24 16x16",
+            "src": "maskable_icon.png",
+            "sizes": "1174x1174",
             "type": "image/x-icon"
         },
         {
-            "src": "TS_Logo_16x16.png",
-            "type": "image/png",
-            "sizes": "16x16"
-        },
-        {
-            "src": "TS_Logo_24x24.png",
-            "type": "image/png",
-            "sizes": "24x24"
-        },
-        {
-            "src": "TS_Logo_32x32.png",
-            "type": "image/png",
-            "sizes": "32x32"
-        },
-        {
-            "src": "TS_Logo_48x48.png",
+            "src": "maskable_icon_x48.png",
             "type": "image/png",
             "sizes": "48x48"
         },
         {
-            "src": "TS_Logo_128x128.png",
+            "src": "maskable_icon_x72.png",
+            "type": "image/png",
+            "sizes": "72x72"
+        },
+        {
+            "src": "maskable_icon_x96.png",
+            "type": "image/png",
+            "sizes": "96x96"
+        },
+        {
+            "src": "maskable_icon_x128.png",
             "type": "image/png",
             "sizes": "128x128"
         },
         {
-            "src": "TS_Logo_256x256.png",
+            "src": "maskable_icon_x192.png",
             "type": "image/png",
-            "sizes": "256x256"
+            "sizes": "192x192"
+        },
+        {
+            "src": "maskable_icon_x384.png",
+            "type": "image/png",
+            "sizes": "384x384"
+        },
+        {
+            "src": "maskable_icon_x72.png",
+            "type": "image/png",
+            "sizes": "512x512"
         }
     ],
     "start_url": ".",
