--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -7,6 +7,10 @@ on:
 jobs:
   Coverage:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: client
+
     steps:
       - name: Checkout to devlop/master branch
         uses: actions/checkout@v2
@@ -24,9 +28,9 @@ jobs:
 
       - name: Changed to client directory and generate coverage for frontend
         run: |
-          cd client
           yarn
           yarn test -- --coverage --watchAll=false
+          cat ./coverage/lcov.info
 
       # - name: Merge the coverage reports
       #   run: |
@@ -37,5 +41,4 @@ jobs:
       - name: Upload report to Coveralls
         uses: coverallsapp/github-action@master
         with:
-          path-to-lcov: ./client/coverage/lcov.info
           github-token: ${{ secrets.GITHUB_TOKEN }}
