🐛 (CICD): Testing frontend deployment

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -42,4 +42,5 @@ jobs:
       - name: Upload report to Coveralls
         uses: coverallsapp/github-action@master
         with:
+          path-to-lcov: coverage/lcov.info
           github-token: ${{ secrets.GITHUB_TOKEN }}
