--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@middy/http-json-body-parser": "^2.5.3",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
+    "chai": "^4.3.6",
     "dotenv": "^16.0.1",
+    "lambda-tester": "^4.0.1",
     "twitter-v2": "^1.1.0"
   },
   "devDependencies": {
